<resources>
    <string name="app_name">What Can I Cook</string>
    <string name="appName">What Can I Cook?</string>
    <string name="about">About the App</string>
    <string name="dietary_needs">Dietary Requirements</string>
    <string name="main_menu_name">Pick a Dish</string>
    <string name="appAboutInfo">Text about app goes here</string>
    <string name="logButtonText">Log Messages</string>
    <string name="backButtonText">Back</string>
    <string name="breakfastContentDesc">Pick Breakfast</string>
    <string name="lunchContentDesc">Pick Dinner</string>
    <string name="dessertContentDesc">Pick Dessert</string>
    <string name="savedrecipebuttonContentDesc">Saved Recipes</string>
    <string name="pantrybuttonContentDesc">My Pantry</string>
    <string name="lunchButtonContentDesc">Pick Lunch</string>
    <string name="savedRecipesTitle">These are saved recipes</string>
    <string name="pantryTitle">Ingredients I have at home</string>
    <string name="aboutAppDesc">About the App</string>
    <string name="dietaryRequirementsTitle">Dietary Requirements</string>
    <string name="switchGlutenLabel">Gluten Free</string>
    <string name="switchNutsLabel">No nuts</string>
    <string name="switchSeafoodLabel">No seafood</string>
    <string name="switchAlcoholLabel">No alcohol</string>
    <string name="switchVeganLabel">Vegan</string>
    <string name="switchLactoVegLabel">Lacto-Veg</string>
    <string name="switchLactoOvoLabel">Lacto-Ovo-Veg</string>
    <string name="switchPescaterianLabel">Pescaterian</string>
    <string name="switchDairyLabel">Dairy/Lactose Free</string>
    <string name="switchEggLabel">Egg free</string>
    <string name="switchSoyLabel">No soy</string>
    <string name="switchRedMeatLabel">No red meat</string>
    <string name="switchPorkLabel">No pork</string>
    <string name="excludeingredientdesc">excludeIngredientDesc</string>
    <string name="exclude_an_ingredient">Exclude an Ingredient</string>
    <string name="placeholder_ingredients">Placeholder_Ingredients</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="buttonL">Log In</string>
    <string name="login_sign_up">Login/Sign Up</string>
    <string name="logTitle">Logs</string>
    <string name="btnClearLogs">Clear Logs</string>
    <string name="ingredientsSelectedTitle">Ingredients you have selected</string>
    <string name="check_my_ingredients">Check my ingredients</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="signin">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="recipe_results">Recipe Results</string>
    <string name="recipe_ingredients">Recipe Ingredients:</string>
    <string name="recipe_steps">Recipe Steps:</string>
    <string name="missing_ingredients_warning">Missing ingredients warning</string>
    <string name="log_messages_button">Log Messages</string>
    <string name="placeholder_ingredientstitle">Pick your ingredients</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="btnCheckIngredient">Check My Ingredients</string>
    <string name="signup">Sign Up</string>
    <string name="string_signin">Sign In</string>
    <string name="searchIngredientInput">Search for an ingredient</string>
    <string name="enoughIngredients">You have enough ingredients!</string>
    <string name="add_an_ingredient_to_pantry">Add an ingredient to pantry</string>
    <string name="missing_suggestion_q">Do you also have these ingredients?</string>
    <string name="exact_match_switch">Allow only exact match</string>
    <string name="start_over_btn">Clear all Ingredients and Start Over</string>
    <string name="share_this_recipe">Share this recipe</string>
    <string name="sendLogsDe">Send Logs to Developer</string>
    <string name="addCustomRecipeButton">Add Custom Recipe</string>
    <string name="savedRecipesPage">Saved Recipes</string>
    <string name="btnFindRecips">Find Recipes</string>
    <string name="sendLogsDev">Send Logs to Developer</string>
    <string name="btnClearIngredients">Clear Ingredients</string>
    <string name="btnAddRecipe">Save recipe</string>
    <string name="recipeNameHint">Enter your recipe name</string>
    <string name="recipeIngredientHint">Enter your ingredients</string>
    <string name="recipeStepsHint">Enter your recipe steps</string>
    <string name="loginTitle">Login</string>
    <string name="customRecipesTitle">Add your recipe</string>
    <string name="customRecipeNameLabel">Recipe name:</string>
    <string name="customRecipeIngLabel">Recipe ingredients:</string>
    <string name="customRecipeStepsLabel">Recipe steps:</string>
    <string name="myIngredientsTitleLabel">Selected Ingredients</string>
    <string name="btnFindRecipesLabel">Find Recipes</string>
    <string name="sign_in_text">Sign In</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="loginIntroText">If you have not used this application before, please create an account which will let you save pantry ingredients and any dietary needs you may have.</string>
    <string name="settings">Settings</string>
    <string name="pantryIntro">Keep a list of the ingredients you have at home so you don\'t spend money on food you already have! And coming soon, you\'ll be able to search for recipes directly from this page.</string>
</resources>
