<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/dietaryIntolerancesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/dietaryRequirementsTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchVegan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/switchVeganLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />

    <Switch
        android:id="@+id/switchLactoVeg"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchLactoVegLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="91dp" />

    <Switch
        android:id="@+id/switchLactoOvo"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchLactoOvoLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="134dp" />

    <Switch
        android:id="@+id/switchPescaterian"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchPescaterianLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="178dp" />

    <Switch
        android:id="@+id/switchGluten"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchGlutenLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="221dp" />

    <Switch
        android:id="@+id/switchLactose"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchDairyLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="264dp" />

    <Switch
        android:id="@+id/switchEgg"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchEggLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="307dp" />

    <Switch
        android:id="@+id/switchNuts"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchNutsLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="350dp" />

    <Switch
        android:id="@+id/switchSoy"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchSoyLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="393dp" />

    <Switch
        android:id="@+id/switchSeafood"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchSeafoodLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="436dp" />

    <Switch
        android:id="@+id/switchAlcohol"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchAlcoholLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="479dp" />

    <Switch
        android:id="@+id/switchRedMeat"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchRedMeatLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="522dp" />

    <Switch
        android:id="@+id/switchPork"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:text="@string/switchPorkLabel"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="525dp" />

    <EditText
        android:id="@+id/excludeIngredient"
        android:layout_width="683dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/exclude_an_ingredient"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="487dp"
        tools:targetApi="o" />


</android.support.constraint.ConstraintLayout>